k8s/eks/api-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment
  namespace: fib-app
  labels:
    app: api
    type: backend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: api
      type: backend

  template:
    metadata:
      labels:
        app: api
        type: backend

    spec:
      containers:
        - name: api-container
          image: 382876614364.dkr.ecr.ap-south-1.amazonaws.com/fib-server:latest

          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "500m"
