k8s/eks/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker-deployment
  namespace: fib-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: worker
      type: backend

  template:
    metadata:
      labels:
        app: worker
        type: backend

    spec:
      containers:
        - name: worker-container
          image: 382876614364.dkr.ecr.ap-south-1.amazonaws.com/fib-worker:latest

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - ps aux | grep node

            initialDelaySeconds: 15
            periodSeconds: 10

          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"

            limits:
              memory: "256Mi"
              cpu: "700m"
