k8s/eks/api-service.yml
apiVersion: v1
kind: Service

metadata:
  name: api
  namespace: fib-app

spec:
  type: ClusterIP

  ports:
    - port: 5000
      targetPort: 5000

  selector:
    app: api
    type: backend
