k8s/eks/client-service.yml
apiVersion: v1
kind: Service

metadata:
  name: client
  namespace: fib-app

spec:
  type: ClusterIP

  ports:
    - port: 3000
      targetPort: 3000

  selector:
    app: client
    type: frontend
