k8s/eks/alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fib-app-ingress
  namespace: fib-app

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
